# lingua-cpp

./: .gitmodules  CMakeLists.txt  README.md
examples/: builder_configurations.cpp  confidence_values_example.cpp  detection_example.cpp
include/lingua/: alphabet.h  detection_result.h  exception.h  language.h  language_detector.h  language_detector_builder.h  lingua.h  model.h  model_loader.h  ngram.h  text_processor.h
src/: alphabet.cpp  language.cpp  language_detector.cpp  language_detector_builder.cpp  model.cpp  model_loader.cpp  ngram.cpp  text_processor.cpp
tests/: comprehensive_tests.cpp  unit_tests.cpp
